samples/_failures_safe/1761564005_e10a36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd6bf457.c: In function ‘tokenize’:
./samples/SAFE/__tmp_dd6bf457.c:168:50: error: ‘TOKEN_D’ undeclared (first use in this function); did you mean ‘TOKEN_EOF’?
  168 |             tokens[token_index++] = create_token(TOKEN_D
      |                                                  ^~~~~~~
      |                                                  TOKEN_EOF
./samples/SAFE/__tmp_dd6bf457.c:168:50: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_dd6bf457.c:168:57: error: expected ‘)’ at end of input
  168 |             tokens[token_index++] = create_token(TOKEN_D
      |                                                 ~       ^
      |                                                         )
./samples/SAFE/__tmp_dd6bf457.c:168:37: error: too few arguments to function ‘create_token’
  168 |             tokens[token_index++] = create_token(TOKEN_D
      |                                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_dd6bf457.c:63:14: note: declared here
   63 | struct Token create_token(enum TokenType type, const char *value, int line, int column) {
      |              ^~~~~~~~~~~~
./samples/SAFE/__tmp_dd6bf457.c:168:13: error: expected declaration or statement at end of input
  168 |             tokens[token_index++] = create_token(TOKEN_D
      |             ^~~~~~
./samples/SAFE/__tmp_dd6bf457.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dd6bf457.c:168:13: error: expected declaration or statement at end of input
